# whoop-app

./: .gitignore  pyproject.toml
whoop_app/api/: get_data.py
whoop_app/csv_data/: README.md
